# BeeBuddy

./: .env.example  .gitignore  .gitleaks.toml  LICENSE  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: cadence_catalog.py  config.py  main.py  monitoring.py  rate_limit.py  redis.py  redis_utils.py  tasks.py
apps/api/app/auth/: __init__.py  admin.py  blocklist.py  cookies.py  dependencies.py  jwt.py  password.py  permissions.py  token_blocklist.py  verified.py
apps/api/app/cli/: promote_admin.py
apps/api/app/db/: celery_session.py  session.py
apps/api/app/middleware/: csrf.py
apps/api/app/routers/: ai.py  (+20 more)
apps/api/scripts/: download_guardrails_fixtures.py  run_endpoint.py
apps/api/tests/: conftest.py  test_account_deletion.py  test_admin_service.py  test_ai_service.py  test_ai_summary.py  test_auth.py  test_cadence_auto_init.py  test_cadence_catalog.py  test_cadences.py  test_crud.py  test_email_service.py  test_email_verification.py  test_endpoint.py  test_feedback.py  test_guardrails.py  test_guardrails_eval.py  test_health.py  test_knowledge_service.py  test_mcp_tools.py  test_monitoring.py  test_oauth2_server.py  test_oauth_service.py  test_password_reset.py  test_photos.py  test_pkce.py  test_rag_local.py  test_rate_limit.py  test_redirect_uri.py  test_safety.py  test_share_enum_binding.py  test_shares.py  test_tasks.py  test_tasks_async_runner.py  test_token_usage.py  test_tool_executor.py  test_tool_use_guard.py  test_verified_dependency.py  test_warmup.py  test_webhooks.py  verify_rag_local.py
(+401 files in other folders)
